extract tests to its own namespace

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,6 @@ dependencies:
 
 test:
   override:
-    - lein test partition.core
+    - lein test partition.core-test
   post:
     - lein uberjar
